--- a/src/index.css
+++ b/src/index.css
@@ -1,78 +1,50 @@
-:root {  
+:root {
+  /* Variables */
+  --primary: #6d6d6d;
+  --on-primary: #fff;
+  --background: #f2f3f7;
+  --text: #333;
+  --border-radius: 8px;
+
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   line-height: 1.5;
-  color: rgb(255 255 255 / 87%);
-  text-rendering: optimizelegibility;
-
-  color-scheme: light dark;
-  background-color: #242424;
-
-  font-synthesis: none;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
 }
 
 body {
-  display: flex;
-  place-items: center;
+  color: var(--text);
+  background-color: var(--background);
+}
 
-  min-width: 320px;
-  min-height: 100vh;
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* Link  */
+.link {
+  font-size: 14px;
+  color: #007bff;
+  text-decoration: none;
 }
 
-button {
-  cursor: pointer;
-
-  padding: 0.6em 1.2em;
-  border: 1px solid transparent;
-  border-radius: 8px;
-
-  font-family: inherit;
-  font-size: 1em;
-  font-weight: 500;
-
-  background-color: #1a1a1a;
-
-  transition: border-color 0.25s;
+.link:hover {
+  text-decoration: underline;
 }
 
-button:hover {
-  border-color: #646cff;
+.activeLink {
+  font-weight: bold;
 }
 
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.flex-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #fff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
+.flex-container-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
