--- a/src/widgets/lyoutHeader/ui/Header.module.css
+++ b/src/widgets/lyoutHeader/ui/Header.module.css
@@ -11,3 +11,7 @@
     background-color: var(--bg-primary);
     box-shadow: 0 .375rem 1.5rem 0 rgb(140 152 164 / 13%);
 }
+
+.buttonsWrapper {
+    gap: 1rem;
+}
