--- a/src/shared/ui/button/Button.module.css
+++ b/src/shared/ui/button/Button.module.css
@@ -7,6 +7,7 @@
 
     width: 2.5rem;
     height: 2.5rem;
+    padding: 0.5rem;
     border: 1px solid var(--primary);
     border-radius: 0.75rem;
 
@@ -34,4 +35,8 @@
 .lg {
     width: 3rem;
     height: 3rem;
+}
+
+.fitContent {
+    width: fit-content;
 }
