--- a/src/widgets/postCardWithComments/ui/PostCardWithComments.module.css
+++ b/src/widgets/postCardWithComments/ui/PostCardWithComments.module.css
@@ -1,4 +1,6 @@
 .card {
+  position: relative;
+
   padding: 1.5rem;
   border-radius: var(--border-radius);
 
@@ -10,4 +12,21 @@
 
 .card:hover {
   transform: translateY(-2px);
+}
+
+.button {
+  border: none;
+  background: none;
+}
+
+.commentsWrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  overflow: auto;
+
+  height: 100%;
+
+  background-color: var(--bg-card);
 }
