--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,45 @@
 :root {
   /* Variables */
-  --primary: #6d6d6d;
-  --on-primary: #fff;
-  --background: #f2f3f7;
-  --text: #333;
   --border-radius: 8px;
+  --header-height: 70px;
+
+  /* light theme colors */
+  --accent: #0f47ad;
+  --primary: #6d6d6d;
+  --on-primary: #0f0f0f;
+
+  /* light theme backgrounds */
+  --background: #f2f3f7;
+  --bg-primary: #fff;
+  --bg-card: #fff;
+
+  /* light theme text colors */
+  --text: #333;
+
+  /* light theme shadows */
+  --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 10%), 0 4px 6px -2px rgb(0 0 0 / 5%);
 
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
   line-height: 1.5;
+}
+
+.dark {
+  /* dark theme colors */
+  --accent: #3d7eff;
+  --primary: #a3a3a3 ;
+  --on-primary: #fff;
+
+  /* dark theme backgrounds */
+  --background: #1f2937;
+  --bg-primary: #111827;
+  --bg-card: #374151;
+
+  /* dark theme text colors */
+  --text: #fff;
+
+  /* dark theme shadows */
+  --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 40%), 0 4px 6px -2px rgb(0 0 0 / 30%);
 }
 
 body {
@@ -20,21 +51,6 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-/* Link  */
-.link {
-  font-size: 14px;
-  color: #007bff;
-  text-decoration: none;
-}
-
-.link:hover {
-  text-decoration: underline;
-}
-
-.activeLink {
-  font-weight: bold;
 }
 
 .flex-container {
