--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,16 @@ body {
   padding: 0;
 }
 
+a{
+  cursor: pointer;
+  color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
 /* Link  */
 .link {
   font-size: 14px;
@@ -35,6 +45,11 @@ body {
 
 .activeLink {
   font-weight: bold;
+}
+
+.page-container {
+  margin: 2rem auto;
+  padding: 1rem;
 }
 
 .flex-container {
