feature: configure store, add posts and users slices

--- a/src/entities/post/ui/postCard/PostCard.module.css
+++ b/src/entities/post/ui/postCard/PostCard.module.css
@@ -11,3 +11,9 @@
 .card:hover {
   transform: translateY(-2px);
 }
+
+.body {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
